--- a/css/style.css
+++ b/css/style.css
@@ -100,3 +100,11 @@ footer{
 }
 
 
+#error{
+    text-align: center;
+    width: 100px;
+    font-weight: 200;
+    font-size: 14px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
