--- a/css/style.css
+++ b/css/style.css
@@ -1,110 +1,117 @@
 body{
-    
-    font-family: 'Poppins', sans-serif;
+    background-color: #f5f5f5;
+    font-family: 'Poppins',sans-serif;
 }
-
 header,footer{
     text-align: center;
-    width: 40vw;
-    margin: 30px auto 30px auto;
-}
-
-main{
+    margin: 30px auto 0px auto;
     width: 300px;
-    margin: 15px auto 15px auto;
 }
-
+main{
+    margin: 30px auto 0px auto;
+    width: 300px;
+}
 form{
-    padding-top: 25px;
     display: flex;
     flex-direction: column;
-    align-items: center;
     row-gap: 20px;
     font-size: 18px;
-    /* -webkit-box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
-    -moz-box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
-    box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
-     */
 }
 label{
     display: block;
     margin-bottom: 10px;
-    
 }
-
 input{
     display: inline;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Poppins',sans-serif;
     width: 236px;
     border: 1px solid #ced4da;
     padding: 10px;
     border-radius: 0px 5px 5px 0px;
     font-weight: 200;
-    font-size: 18px;
-}
+    font-size:18px;
 
-textarea:focus, input:focus, input:active, select:focus{  
-    border-color:rgba(230,16,230,1);
-    -webkit-box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
-    -moz-box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
-    box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
-    outline: 0;
 }
-
+input[type="email"]{
+    border: 1px solid #ced4da;
+    font-weight: 200;
+    font-size:18px;
+    border-radius: 5px;
+    width: 278px;
+}
 input[type="submit"]{
     background-color: #fd0c49;
-    width: 150px;
     color: #fff;
-    font-weight: 200;
+    font-weight: 400;
     border-radius: 5px;
-}
-input[type="submit"]:hover{
-    background-color:rgba(230,16,230,1) ;
-    -webkit-box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
-    -moz-box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
-    box-shadow: 0px 0px 33px -16px rgba(230,16,230,1);
+    width: 100%;
 }
 select{
-    font-family: 'Poppins', sans-serif;
-    width: 300px;
-    border: 1px solid #ced4da ;
+    font-family: 'Poppins',sans-serif;
+    width: 100%;
+    border: 1px solid #ced4da;
     border-radius: 5px;
-    padding: 10px;
-    font-size: 18px;
-    font-weight: 100;  
-    background-color: #fff;
+    font-weight: 200;
+    font-size:18px;
 }
-
+p{
+    font-weight: 100;
+    font-size: 14px;
+}
 footer{
-    font-size: 100;
+    font-weight: 100;
 }
-
-/*ids*/
+/*Clases*/
+.avatarItem{
+    background-color: #fff;
+    border: solid 1px #fd0c49;
+    border-radius: 5px;
+    width: 40px;
+    height: 40px;
+    padding-top: 5px;
+    padding-left: 5px;
+}
+/*IDs*/
 #nicka{
-    font-family: 'Poppins', sans-serif;
     float: left;
-    width: 20px;
+    font-family: 'Poppins', sans-serif;
     text-align: center;
-    padding: 10px;
-    border-radius: 5px 0px 0px 5px;
+    width: 20px;
     background-color: #ced4da;
     border: 1px solid #ced4da;
+    padding: 10px;
+    border-radius: 5px 0px 0px 5px;
     font-weight: 400;
     font-size: 18px;
 }
-
-#mail{
-    width: 278px;
-    border-radius: 5px;
-    color: gray;
-}
-
-
 #error{
     text-align: center;
-    width: 100px;
-    font-weight: 200;
+    color:#fd0c49;
+    font-weight: 300;
     font-size: 14px;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+#avatar{
+    float:left;
+}
+#avatarContainer{
+    display: flex;
+    background-color: #fff;
+    border: solid 1px #fd0c49;
+    border-radius: 5px;
+    width: 125px;
+    height: 125px;
+    justify-content:center;
+    align-items:center;
+    margin-right: 10px;
+}
+#avatargrid{
+    display: flex;
+    justify-content:center;
+    align-items:center;
+    vertical-align: bottom;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 30px;
 }
